--- a/index.html
+++ b/index.html
@@ -14,13 +14,24 @@
       width: 100%;
       max-width: 1000px;
       margin: auto;
+      font-family: Helvetica, san-serif;
+      line-height: 1.5;
+      text-align: center;
+    }
+    .button {
+      text-decoration: none;
+      padding: 20px 30px;
+      font-size: 20px;
+      color: White;
+      font-weight: 600;
+      border: 2px solid White;
+      text-transform: uppercase;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <p>Hello world! This is HTML5 Boilerplate.</p>
-    <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA">Apply now</a>
+    <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank" class="button">Apply now</a>
   </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
