--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
       font-family: Helvetica, san-serif;
       line-height: 1.5;
       text-align: center;
+      color: White;
+    }
+    .container h1 {
+      letter-spacing: 1px;
+      font-size: 60px;
     }
     .button {
       text-decoration: none;
@@ -27,11 +32,31 @@
       border: 2px solid White;
       text-transform: uppercase;
     }
+    section {
+      margin-top: 1em;
+    }
   </style>
 </head>
 <body>
   <div class="container">
-    <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank" class="button">Apply now</a>
+    <h1>
+      Learn to code &amp;
+      <br>
+      Start your career in tech.
+      <br>
+      <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank" class="button">Apply now</a>
+    </h1>
+    
+
+    <section>
+      <h2>Who Is This Course For?</h2>
+    </section>
+    <section>
+      <h2>What Will You Learn?</h2>
+    </section>
+    <section>
+      <h2>About Your Mentor</h2>
+    </section>
   </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
