--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     body, html {
       margin: 0;
     }
+    body {
+      background: Black;
+    }
     .container {
       width: 95%;
       padding: 2.5%;
@@ -48,6 +51,7 @@
       font-weight: 600;
       border: 2px solid Orange;
       text-transform: uppercase;
+      background: rgba(0,0,0,0.3);
     }
     section {
       clear: both;
@@ -65,6 +69,7 @@
     }
     footer .button {
       display: inline-block;
+      background: transparent;
       margin-top: 10px;
       padding: 10px 30px;
     }
@@ -99,7 +104,7 @@
 </head>
 <body>
   <div class="container">
-    <p>It took me 2 years of bad paid part time work to change careers,<br>I'll teach you how to do it in one without quitting your job:</p>
+    <h2>If I can do it, so can you:</h2>
     <h1>
       Learn to code the web &amp;
       <br>
@@ -139,6 +144,7 @@
     <section>
       <h2>About me</h2>
       In the past two years I changed my career and went from Architecture into the Tech Industry by teaching myself how to code and got a job in Tech startup.
+      It took me 2 years of bad paid part time work to change careers,<br>I'll teach you how to do it in one without quitting your job:
     </section>
     
     <footer>
@@ -153,7 +159,9 @@
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
-  <script type="text/javascript"> $.backstretch("/background.jpg"); </script>
+  <script type="text/javascript">
+    $('body').backstretch("/background.jpg", {fade: 2000});
+  </script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
