--- a/index.html
+++ b/index.html
@@ -15,17 +15,22 @@
     }
     body {
       background: Black;
+      font-weight: 300;
     }
     .container {
-      width: 95%;
-      padding: 2.5%;
+      width: 94%;
+      padding: 3%;
       max-width: 1000px;
       margin: auto;
       font-family: Helvetica, san-serif;
       line-height: 1.5;
       text-align: center;
-      color: White;
+      color: WhiteSmoke;
       overflow: hidden;
+    }
+    .content {
+      background: WhiteSmoke;
+      border: 2px solid Gray;
     }
     .container h1 {
       letter-spacing: 1px;
@@ -41,6 +46,8 @@
       letter-spacing: 1px;
       margin: 0;
       margin-bottom: 15px;
+      font-size: 24px;
+      font-weight: 400;
     }
     .button {
       display: inline-block;
@@ -55,13 +62,11 @@
     }
     section {
       clear: both;
-      background: White;
       color: Black;
       padding: 15px;
-      margin-top: 40px;
+      text-align: left;
     }
     footer {
-      background: White;
       color: Black;
       padding: 15px;
       display: inline-block;
@@ -74,16 +79,37 @@
       padding: 10px 30px;
     }
     .facts {
-      text-align: left;
-      display: inline-block;
-      padding: 0 15px;
-      overflow: hidden;
-      margin: auto;
-      background: White;
-      color: Black;
+      margin-top: 20px;
     }
     .fact {
-      margin: 15px 0;
+      display: inline-block;
+      color: Black;
+      text-align: left;
+      margin: 15px;
+      width: 230px;
+      vertical-align: top;
+    }
+    .daysleft {
+      font-weight: bold;
+    }
+    strong {
+      font-weight: 600;
+    }
+
+    h6 {
+      font-size: 28px;
+    }
+
+    a {
+      color: Black;
+    }
+
+    hr {
+      width: 80%;
+      margin: 20px auto;
+      border: none;
+      border-top: 1px dashed LightGray;
+      height: 0;
     }
 
     @media (max-width: 460px) {
@@ -92,75 +118,95 @@
       }
       .container h1 {
         line-height: 1.5;
-        margin-top: 60px;
+        margin-top: 40px;
         font-size: 23px;
       }
       .button {
         padding: 10px 14px;
         margin: 30px 0 10px 0;
       }
+      h6 {
+        font-size: 18px;
+      }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2>If I can do it, so can you:</h2>
+    <h6>If I could do it, so can you:</h6>
     <h1>
       Learn to code the web &amp;
       <br>
       Start your career in tech.
+      <br>
       <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank" class="button">Apply for the course</a>
       <span>Starts 1. September 2014!</span>
     </h1>
 
-    <div class="facts">
-      <div class="fact">
-        <strong>How?</strong> 
-        <br>
-        Learn by building 12 real-life projects,<br>broken down into weekly tasks &amp; lessons.
+    <div class="content">
+      <div class="facts">
+        <div class="fact">
+          <strong>How?</strong> 
+          <br>
+          Learn by building 12 real-life projects. Broken down into weekly challenges.
+        </div>
+        <div class="fact">
+          <strong>When?</strong>
+          <br>
+          Starts September 2014, runs for 12 months. Each month is one separate unit.
+        </div>
+        <div class="fact">
+          <strong>Price?</strong>
+          <br>
+          $30 per month - cancel any time.
+        </div>
       </div>
-      <div class="fact">
-        <strong>When?</strong>
+      
+      <hr>
+      <section>
+        <h2>Who is this course for?</h2>
+        Do you want to join the new economy while staying in your current job? Then this is the course for you! I will teach you how to master HTML, CSS, JavaScript, and more. So you can do what I did and create a thriving career for yourself in the growing tech sector!
         <br>
-        Starts September 2014, for 12 months.
-      </div>
-      <div class="fact">
-        <strong>Price?</strong>
         <br>
-        $30 per month - cancel any time.
-      </div>
+        This will be the <em>Pioneers</em> intake, I am looking for the first 50 people who really want to change their careers in the coming months!
+        <br>
+        <br>
+        <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank">The course will start in only <span class="daysleft"></span>, apply now to reserve your seat!</a>
+      </section>
+      <hr>
+      <section>
+        <h2>What will you learn?</h2>
+        My goal is to teach you all you need to get a job in tech. We will start with creating websites, after that we will be building <a href="http://en.wikipedia.org/wiki/Single-page_application" target="_blank">Single-page applications</a>, and finish the course with server and database programming in <a href="http://nodejs.org/" target="_blank">Node.js</a> and <a href="http://www.mongodb.org/" target="_blank">MongoDB</a>.
+        Once a week you will get a task from me. Every week we will learn a new concept and apply it to a concrete real life project.
+        Every month we start a new project. By the end of the year you will have a portfolio of 12 projects and a <a href="https://github.com/" target="_blank">Github</a> account full of open source code to apply for your first job in tech.
+        <br>
+        <br>
+        <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank">The course will start in only <span class="daysleft"></span>, apply now to reserve your seat!</a>
+      </section>
+      <hr>
+      <section>
+        <h2>About me</h2>
+        In the past two years I changed my career and went from architecture into tech by teaching myself how to code and got a job in a great tech startup - the wonderful: <a href="http://www.escapethecity.org/" target="_blank">Escape The City</a>.
+        The goal for this course is simple: what took me 2 years (including one year of bad paid part time work) I'll teach you how to do in one - without quitting your job!
+      </section>
+
+      <footer>
+        <h2>
+          Secure your seat today:
+          <br>
+          <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank" class="button">Apply now</a>
+        </h2>
+        Starts 1. September 2014 - only <span class="daysleft"></span> left!
+      </footer>
     </div>
-
-    <section>
-      <h2>Who is this course for?</h2>
-      This will be the Pioneers intake, I am looking for the first 100 people who are really want to join me on helping you to change your career. The course will start this September, apply now to reserve your seat!
-
-    </section>
-    <section>
-      <h2>What will you learn?</h2>
-      Once a week you will get a task from me. Every week we will learn a new concept and apply it to a concrete real life project.
-      Every month we start a new project. By the end of the year you will have a portfolio of 12 projects and a github account full of open source code to apply for your first job in tech.
-    </section>
-    <section>
-      <h2>About me</h2>
-      In the past two years I changed my career and went from Architecture into the Tech Industry by teaching myself how to code and got a job in Tech startup.
-      It took me 2 years of bad paid part time work to change careers,<br>I'll teach you how to do it in one without quitting your job:
-    </section>
-    
-    <footer>
-      <h2>
-        Secure your seat today:
-        <br>
-        <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank" class="button">Apply now</a>
-      </h2>
-      Starts 1. September 2014
-    </footer>
   </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
   <script type="text/javascript">
     $('body').backstretch("/background.jpg", {fade: 2000});
+
+    $('.daysleft').text('10 days');
   </script>
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
