--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     .content {
       background: WhiteSmoke;
       border: 2px solid Gray;
+      padding: 30px;
     }
     .container h1 {
       letter-spacing: 1px;
@@ -67,14 +68,13 @@
       text-align: left;
     }
     footer {
-      color: Black;
+      color: White;
       padding: 15px;
       display: inline-block;
       margin-top: 2em;
     }
     footer .button {
       display: inline-block;
-      background: transparent;
       margin-top: 10px;
       padding: 10px 30px;
     }
@@ -83,7 +83,7 @@
     }
     .fact {
       display: inline-block;
-      color: Black;
+      color: White;
       text-align: left;
       margin: 15px;
       width: 230px;
@@ -106,7 +106,7 @@
 
     hr {
       width: 80%;
-      margin: 20px auto;
+      margin: 35px auto;
       border: none;
       border-top: 1px dashed LightGray;
       height: 0;
@@ -143,62 +143,60 @@
       <span>Starts 1. September 2014!</span>
     </h1>
 
-    <div class="content">
-      <div class="facts">
-        <div class="fact">
-          <strong>How?</strong> 
-          <br>
-          Learn by building 12 real-life projects. Broken down into weekly challenges.
-        </div>
-        <div class="fact">
-          <strong>When?</strong>
-          <br>
-          Starts September 2014, runs for 12 months. Each month is one separate unit.
-        </div>
-        <div class="fact">
-          <strong>Price?</strong>
-          <br>
-          $30 per month - cancel any time.
-        </div>
+    <div class="facts">
+      <div class="fact">
+        <strong>How?</strong> 
+        <br>
+        Learn by building 12 real-life projects. Broken down into weekly challenges.
       </div>
-      
-      <hr>
-      <section>
-        <h2>Who is this course for?</h2>
-        Do you want to join the new economy while staying in your current job? Then this is the course for you! I will teach you how to master HTML, CSS, JavaScript, and more. So you can do what I did and create a thriving career for yourself in the growing tech sector!
+      <div class="fact">
+        <strong>When?</strong>
         <br>
+        Starts September 2014, runs for 12 months. Each month is one separate unit.
+      </div>
+      <div class="fact">
+        <strong>Price?</strong>
         <br>
-        This will be the <em>Pioneers</em> intake, I am looking for the first 50 people who really want to change their careers in the coming months!
-        <br>
-        <br>
-        <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank">The course will start in only <span class="daysleft"></span>, apply now to reserve your seat!</a>
-      </section>
-      <hr>
-      <section>
-        <h2>What will you learn?</h2>
-        My goal is to teach you all you need to get a job in tech. We will start with creating websites, after that we will be building <a href="http://en.wikipedia.org/wiki/Single-page_application" target="_blank">Single-page applications</a>, and finish the course with server and database programming in <a href="http://nodejs.org/" target="_blank">Node.js</a> and <a href="http://www.mongodb.org/" target="_blank">MongoDB</a>.
-        Once a week you will get a task from me. Every week we will learn a new concept and apply it to a concrete real life project.
-        Every month we start a new project. By the end of the year you will have a portfolio of 12 projects and a <a href="https://github.com/" target="_blank">Github</a> account full of open source code to apply for your first job in tech.
-        <br>
-        <br>
-        <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank">The course will start in only <span class="daysleft"></span>, apply now to reserve your seat!</a>
-      </section>
-      <hr>
-      <section>
-        <h2>About me</h2>
-        In the past two years I changed my career and went from architecture into tech by teaching myself how to code and got a job in a great tech startup - the wonderful: <a href="http://www.escapethecity.org/" target="_blank">Escape The City</a>.
-        The goal for this course is simple: what took me 2 years (including one year of bad paid part time work) I'll teach you how to do in one - without quitting your job!
-      </section>
-
-      <footer>
-        <h2>
-          Secure your seat today:
-          <br>
-          <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank" class="button">Apply now</a>
-        </h2>
-        Starts 1. September 2014 - only <span class="daysleft"></span> left!
-      </footer>
+        $30 per month - cancel any time.
+      </div>
     </div>
+    
+    <hr>
+    <section class="content">
+      <h2>Who is this course for?</h2>
+      Do you want to join the new economy while staying in your current job? Then this is the course for you! I will teach you how to master HTML, CSS, JavaScript, and more. So you can do what I did and create a thriving career for yourself in the growing tech sector!
+      <br>
+      <br>
+      This will be the <em>Pioneers</em> intake, I am looking for the first 50 people who really want to change their careers in the coming months!
+      <br>
+      <br>
+      <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank">The course will start in only <span class="daysleft"></span>, apply now to reserve your seat!</a>
+    </section>
+    <hr>
+    <section class="content">
+      <h2>What will you learn?</h2>
+      My goal is to teach you all you need to get a job in tech. We will start with creating websites, after that we will be building <a href="http://en.wikipedia.org/wiki/Single-page_application" target="_blank">Single-page applications</a>, and finish the course with server and database programming in <a href="http://nodejs.org/" target="_blank">Node.js</a> and <a href="http://www.mongodb.org/" target="_blank">MongoDB</a>.
+      Once a week you will get a task and instructions from me into your inbox. Every week we will learn a new concept and apply it right away to a concrete real life project.
+      Each month we start a new project. By the end of the year you will have a portfolio of 12 projects and a <a href="https://github.com/" target="_blank">Github</a> account full of open source code to apply for your first job in tech.
+      <br>
+      <br>
+      <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank">The course will start in only <span class="daysleft"></span>, apply now to reserve your seat!</a>
+    </section>
+    <hr>
+    <section class="content">
+      <h2>About me</h2>
+      In the past two years I changed my career and went from architecture into tech by teaching myself how to code and got a job in a great tech startup - the wonderful: <a href="http://www.escapethecity.org/" target="_blank">Escape The City</a>.
+      The goal for this course is simple: what took me 2 years (including one year of bad paid part time work) I'll teach you how to do in one - without quitting your job!
+    </section>
+
+    <footer>
+      <h2>
+        Secure your seat today:
+        <br>
+        <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEFqZ3F0VERyV2wyc0xxLUkyVmd0d2c6MA" target="_blank" class="button">Apply now</a>
+      </h2>
+      Starts 1. September 2014 - only <span class="daysleft"></span> left!
+    </footer>
   </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
