setup build system

--- a/index.html
+++ b/index.html
@@ -3,132 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title></title>
+  <title>archi2tech - Start Your Career in Tech!</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <style type="text/css">
-    body, html {
-      margin: 0;
-    }
-    body {
-      background: Black;
-      font-weight: 300;
-    }
-    .container {
-      width: 94%;
-      padding: 3%;
-      max-width: 1000px;
-      margin: auto;
-      font-family: Helvetica, san-serif;
-      line-height: 1.5;
-      text-align: center;
-      color: WhiteSmoke;
-      overflow: hidden;
-    }
-    .content {
-      background: WhiteSmoke;
-      border: 2px solid Gray;
-      padding: 30px;
-    }
-    .container h1 {
-      letter-spacing: 1px;
-      font-size: 60px;
-      margin-bottom: 80px;
-    }
-    .container h1 span{
-      display: block;
-      margin-top: 10px;
-      font-size: 18px;
-    }
-    .container h2 {
-      letter-spacing: 1px;
-      margin: 0;
-      margin-bottom: 15px;
-      font-size: 24px;
-      font-weight: 400;
-    }
-    .button {
-      display: inline-block;
-      text-decoration: none;
-      padding: 20px 24px;
-      font-size: 20px;
-      color: Orange;
-      font-weight: 600;
-      border: 2px solid Orange;
-      text-transform: uppercase;
-      background: rgba(0,0,0,0.3);
-    }
-    section {
-      clear: both;
-      color: Black;
-      padding: 15px;
-      text-align: left;
-    }
-    footer {
-      color: White;
-      padding: 15px;
-      display: inline-block;
-      margin-top: 2em;
-    }
-    footer .button {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 10px 30px;
-    }
-    .facts {
-      margin-top: 20px;
-    }
-    .fact {
-      display: inline-block;
-      color: White;
-      text-align: left;
-      margin: 15px;
-      width: 230px;
-      vertical-align: top;
-    }
-    .daysleft {
-      font-weight: bold;
-    }
-    strong {
-      font-weight: 600;
-    }
-
-    h6 {
-      font-size: 28px;
-    }
-
-    a {
-      color: Black;
-    }
-
-    hr {
-      width: 80%;
-      margin: 35px auto;
-      border: none;
-      border-top: 1px dashed LightGray;
-      height: 0;
-    }
-
-    @media (max-width: 460px) {
-      .container {
-        line-height: 1.2;
-      }
-      .container h1 {
-        line-height: 1.5;
-        margin-top: 40px;
-        font-size: 23px;
-      }
-      .button {
-        padding: 10px 14px;
-        margin: 30px 0 10px 0;
-      }
-      h6 {
-        font-size: 18px;
-      }
-    }
+    
   </style>
 </head>
 <body>
@@ -202,17 +84,6 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-backstretch/2.0.4/jquery.backstretch.min.js"></script>
   <script type="text/javascript">
-    $('body').backstretch("/background.jpg", {fade: 2000});
-
-    $('.daysleft').text('10 days');
-  </script>
-  <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-53688224-1', 'auto');
-    ga('send', 'pageview');
   </script>
 </body>
 </html>
